--- a/LamHongHuy_16011221/app/src/main/AndroidManifest.xml
+++ b/LamHongHuy_16011221/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Main2ActivityBai2" />
-        <activity android:name=".ActivityBai2NhapSo"></activity>
+        <activity android:name=".ActivityBai2NhapSo">
+
+        </activity>
     </application>
 
 </manifest>
